--- a/DataChannelOrtc.Xamarin/DataChannelOrtc/DataChannelOrtc/ChatPage.xaml
+++ b/DataChannelOrtc.Xamarin/DataChannelOrtc/DataChannelOrtc/ChatPage.xaml
@@ -18,17 +18,21 @@
                             <Grid Padding="10">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="auto" />
+                                    <RowDefinition Height="auto" />
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="60" />
-                                    <ColumnDefinition Width="200" />
+                                    <ColumnDefinition Width="45" />
+                                    <ColumnDefinition Width="195" />
                                 </Grid.ColumnDefinitions>
                                 <Label Text="{Binding Time}"
                                        Grid.Row="0"
                                        Grid.Column="0"
                                        TextColor="Blue" />
-                                <Label Text="{Binding Text}"
+                                <Label Text="{Binding AuthorName}"
                                        Grid.Row="0"
+                                       Grid.Column="1" />
+                                <Label Text="{Binding Text}"
+                                       Grid.Row="1"
                                        Grid.Column="1" />
                             </Grid>
                         </ViewCell>
