--- a/DataChannelOrtc.Xamarin/DataChannelOrtc/DataChannelOrtc/PeersListPage.xaml
+++ b/DataChannelOrtc.Xamarin/DataChannelOrtc/DataChannelOrtc/PeersListPage.xaml
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:DataChannelOrtc"
-             x:Class="DataChannelOrtc.MainPage"
+             x:Class="DataChannelOrtc.PeersListPage"
              Title="DataChannelOrtc.Xamarin"
              Padding="15,15,15,30"
              BackgroundColor="LightGray">
 
     <ContentPage.Content>
+        
         <StackLayout>
             <ListView x:Name="peersListView"
                         HasUnevenRows="True"
@@ -58,6 +58,7 @@
                     FontSize="Medium" 
                     Margin="10,0,10,0"/>
         </StackLayout>
+        
     </ContentPage.Content>
     
 </ContentPage>
