--- a/DataChannelOrtc.Xamarin/DataChannelOrtc/DataChannelOrtc/ChatPage.xaml
+++ b/DataChannelOrtc.Xamarin/DataChannelOrtc/DataChannelOrtc/ChatPage.xaml
@@ -22,20 +22,20 @@
                                     <RowDefinition Height="auto" />
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="35" />
                                     <ColumnDefinition Width="205" />
+                                    <ColumnDefinition Width="35" />
                                 </Grid.ColumnDefinitions>
-                                <Label Text="{Binding Time}"
-                                       Grid.Row="0"
-                                       Grid.Column="0"
-                                       TextColor="Blue"
-                                       Font="Bold"
-                                       FontSize="Small" />
                                 <Label Text="{Binding AuthorName}"
                                        Grid.Row="0"
-                                       Grid.Column="1" 
+                                       Grid.Column="0" 
                                        Font="Bold" 
                                        FontSize="Small"/>
+                                <Label Text="{Binding Time}"
+                                       Grid.Row="0"
+                                       Grid.Column="1"
+                                       TextColor="Gray"
+                                       Font="Bold"
+                                       FontSize="Small" />
                                 <Label Text="{Binding Text}"
                                        Grid.Row="1"
                                        Grid.Column="0" 
